# substreams-indexer-stake-tracker

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  schema.sql  substreams.yaml
abi/: graph.json  rewards.json  transfer.json
proto/allocations/v1/: allocations.proto
src/: lib.rs  maps.rs  utils.rs
src/abi/: graph.rs  mod.rs  rewards.rs  transfer.rs
src/pb/: allocations.types.v1.rs  mod.rs
