[package]
name = "allocation-substreams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]


[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.9"