[package]
name = "allocation-substreams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex = "0.4.3"
num-bigint = "0.4"
prost = "0.11.0"
prost-types = "0.11.0"
substreams = { version = "0.5.6" }
substreams-ethereum = "0.9"
substreams-database-change = "1.2"
serde_json = "1.0.113"

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.9"